# wren

./: .gitignore  BUILD.md  CHANGES_SUMMARY.md  CMakeLists.txt  README.md  SYNTAX_CHANGES.md
cmake/: WrenConfig.cmake.in
doc/md/: CHANGELOG.md  CHANGES_IMPLEMENTED.md  CHANGES_SUMMARY.md  FINAL_SUMMARY.md  FUNCTIONAL_SYNTAX_COMPLETE.md  FUNCTION_SYNTAX_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  MIGRATION_PLAN.md  REPL_TIMING_SUMMARY.md  VERIFICATION.md
doc/site/: functions.markdown  syntax.markdown
doc/site/modules/core/: fn.markdown
doc/site/modules/meta/: meta.markdown
example/: object_number_demo  object_number_demo.c  skynet.wren
example/stdlib/: demo.wren
src/include/: wren.h  wren_iterator.h
src/optional/: wren_opt_meta.c  wren_opt_random.c
src/std/: README.md  wren_std_io.h  wren_stdlib.c  wren_stdlib.h
src/std/io/: io.c  io.h  io.wren  io.wren.inc
src/std/math/: math.c  math.h  math.wren  math.wren.inc
src/std/math/random/: random.h  random.wren  random.wren.inc  random_module.c  random_module.h
src/std/strconv/: strconv.c  strconv.h  strconv.wren  strconv.wren.inc
src/std/strings/: strings.c  strings.h  strings.wren  strings.wren.inc
src/std/time/: time.c  time.h  time.wren  time.wren.inc
src/vm/: wren_common.h  wren_compiler.c  wren_core.c  wren_core.h  wren_core.wren  wren_core.wren.inc  wren_iterator.c  wren_primitive.h  wren_value.c  wren_value.h  wren_vm.c  wren_vm.h
test/: demo_fn_call_sugar.wren  final_test.wren  main.c  test_all_features.wren  test_arity_simple.wren  test_comprehensive.wren  test_fn_both.wren  test_fn_call_sugar.wren  test_fn_syntax.wren  test_inline.wren  test_new_syntax.wren  test_old_syntax.wren  test_parse.wren  test_precedence.wren  test_repl_behavior.wren  test_simple.wren  test_simple_fn.wren  verify_all.wren
test/api/: api_tests.c  api_tests.h  object_number.c  object_number.h  object_number.wren
test/benchmark/: delta_blue.wren
test/core/function/: arity.wren  call_extra_arguments.wren  call_missing_arguments.wren  call_runtime_error.wren  equality.wren  to_string.wren  type.wren
test/core/io/: io_test.wren
test/core/list/: iterate.wren  iterator_value.wren  reduce.wren
test/core/map/: iterate.wren  key_iterate.wren  value_iterate.wren
test/core/math/: math_test.wren
test/core/math/random/: module_functions.wren  random_test.wren
test/core/object/: is.wren
test/core/range/: iterate.wren  iterator_value.wren
test/core/strconv/: strconv_test.wren
test/core/string/: iterate.wren  iterator_value.wren
test/core/string_byte_sequence/: iterate.wren  iterator_value.wren  iterator_value_too_large.wren
test/core/string_code_point_sequence/: iterate.wren  iterator_value.wren  iterator_value_incomplete.wren  iterator_value_too_large.wren
test/core/strings/: strings_test.wren
test/core/time/: time_test.wren
test/language/assignment/: local.wren
test/language/break/: closure_in_for.wren  closure_in_while.wren
test/language/closure/: assign_to_closure.wren  close_over_function_parameter.wren  close_over_later_variable.wren  close_over_method_parameter.wren  closed_closure_in_function.wren  nested_closure.wren  open_closure_in_function.wren  reference_closure_multiple_times.wren  reuse_closure_slot.wren  shadow_closure_with_local.wren  unused_closure.wren  unused_later_closure.wren
test/language/continue/: closure_in_for.wren  closure_in_while.wren  in_function_in_loop.wren
test/language/fiber/: closure.wren
test/language/field/: closure.wren  in_fn_in_static_method.wren
test/language/for/: close_over_loop_variable.wren  closure_in_body.wren  only_evaluate_sequence_once.wren  return_closure.wren  return_inside.wren  truth.wren
test/language/function/: call_sugar.wren  empty_body.wren  fn_syntax.wren  newline_body.wren  newline_in_expression_block.wren  no_newline_before_close.wren  no_parameters.wren  parameters.wren  syntax.wren
test/language/if/: truth.wren
test/language/inheritance/: inherit_from_closure.wren  inherited_fields_in_closure.wren
test/language/logical_operator/: and_truth.wren  or_truth.wren  zero_falsy.wren
test/language/method_call/: without_parens.wren
test/language/nonlocal/: assignment.wren  undefined.wren  use_in_function.wren  use_in_function_before_definition.wren
test/language/object_number/: attributes_still_work.wren  no_callback.wren
test/language/return/: after_else.wren  after_if.wren  after_while.wren  in_function.wren  return_null_if_newline.wren
test/language/static_field/: closure.wren
test/language/super/: closure.wren  super_in_closure_in_inherited_method.wren
test/language/this/: closure.wren  nested_class.wren  nested_closure.wren
test/language/variable/: undefined_local.wren
test/language/while/: closure_in_body.wren  return_closure.wren  return_inside.wren  truth.wren
test/limit/: long_function.wren  many_constants.wren  reuse_constants.wren  too_many_constants.wren  too_many_function_parameters.wren
tools/: CMakeLists.txt  README.md  example.wren  repl.c
util/: test.py
